Add registration_link to Events; update registration_info to be manag… (#150)
* Add registration_link to Events; update registration_info to be managed only by event admin

* Permitted_form_for already checks text field

--- a/app/views/events/edit_partials/_tickets.html.slim
+++ b/app/views/events/edit_partials/_tickets.html.slim
@@ -20,6 +20,11 @@
               = wcms_component 'forms/redactor_editor', form: f, attribute: :registration_info
             - else
               .well.well-faux-input = @event.registration_info.to_s.html_safe
+        .col-md-12
+          .form-group
+            = f.label :registration_link 
+            = f.text_field :registration_link, class: 'form-control'
+
 
 
       hr
