--- a/app/views/sites/edit_partials/_feature_locations.html.slim
+++ b/app/views/sites/edit_partials/_feature_locations.html.slim
@@ -14,7 +14,7 @@
         .form-group.col-xs-12
           = f.label :slug
           = f.text_field :slug, class: 'form-control'
-          p.help-block Slugs should be unique to the path. They are used for referencing multiple feature locations on the same page.
+          p.help-block Slug should be set to 'header-banner' unless otherwise instructed. 
         .form-group.col-md-6
           =' f.label :preferred_image_width
           = f.text_field :preferred_image_width, class: 'form-control'
