check if author has affilations before join

--- a/app/views/articles/edit_partials/_form.html.slim
+++ b/app/views/articles/edit_partials/_form.html.slim
@@ -119,7 +119,8 @@
                         .person_details
                           = author.name
                           .department = author.department
-                          span.affiliation = author.affiliations.join(', ')
+                          - if author.affiliations
+                            span.affiliation = author.affiliations.join(', ')
                         button.btn.btn-danger.pull-right.delete type="button" = fa_icon('times')
                         hr
                 .form-inline
